k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
metadata:
  name: wisecow-ingress
  namespace: wisecow  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: wisecow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-svc   # <-- match your Service name
            port:
              number: 80        # <-- match Service port
